--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Coding Quiz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Random Password Generator</title>
 
-<!-- Adding Bootstrap for pretty CSS-->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 
-<!-- Adding jQuery for timer function-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<!-- Adding CSS-->
-  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
+    <h1>Andrew's Okay Password Generator</h1>
+</header>
+<div class="container">
+  <div class="row">
+      <div class="card" style="width: 30rem;">
+      <img class="card-img-top">
+      <div class="card-body">
+        <h4 class="card-title">Click the button to generate your okay password.</h4>
+        <a href="#" id=generate class="btn btn-primary">Generate Now!</a>
+      <div class= "card-body">
+        <textarea readonly id='password' placeholder= "Password will appear here" aria-label="New Password">
 
-  <script src="script.js" type="text/javascript">
+        </textarea>
 
-
-// Adding timer to the page
-    <p id="timer"></p>
-
-
-
-
-  </script>
-
-    <div id="timer-div">
-    You have <span id="time">02:00</span> minutes left.
-    </div>
-
-<!-- Adding button to the page with its own div-->
-    <div id="button-wrapper"> 
-      <button id="button" type="button" class="btn btn-dark">Begin Quiz</button>
-    </div>
+      </div>
+  </div>
+</div>
+    <script src="script.js"></script>
 </body>
 </html>
